--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 		crossorigin="anonymous"></script>
 		<script type="text/javascript" src="index.js"></script>
-	<title></title>
+	<title>Sass y JQuery</title>
 </head>
 <body>
 	<nav>
