mejorado el JQuery, primera fase del responsive añadida

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Elsie|Satisfy" rel="stylesheet">
@@ -29,9 +30,9 @@
 		</div>
 	</nav>
 	<header>
-		<h4>del &nbsp;amor</h4>
-		<h4>Sentí &nbsp;el &nbsp;aroma</h4>
 		<h1>Buenos &nbsp;Aires &nbsp;Café</h1>
+		<h4 class="delAmor">del &nbsp;amor</h4>
+		<h4>Sentí &nbsp;el &nbsp;aroma</h4>		
 	</header>
 	<section class="tiposCafe">
 		<h2>Todos nuestros cafés</h2>
@@ -50,11 +51,27 @@
 			</div>
 		</article>
 	</section>
+	<section class="tiposCafe2">
+		<article class="nuestros">
+			<h3>Nuestros tipos de cafe</h3>
+		</article>
+		<article class="colombiano2">
+			<h4>Colombiano</h4>
+		</article>
+		<article class="brasileno2">
+			<h4>Brasileño</h4>
+		</article>
+		<article class="etiope2">
+			<h4>Etiope</h4>
+		</article>
+		<article class="ecuatoriano2">
+			<h4>Ecuatoriano</h4>
+		</article>
+	</section>
 	<section class="seccionFrappe">
 		<div class="contenedorFrappe">
 			<img id="frappe" src="img/frapu.png"></img>			
 		</div>
-
 		<article>
 			<div class="titularLorem">
 				<h4>Titular que habla de</br>Frappes</h4>
@@ -68,8 +85,10 @@
 		<article>
 			<article class="bolsaImg"></article>
 			<article class="bolsaLorem">
-				<h5>Hablemos de café</h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fringilla ullamcorper condimentum. Praesent arcu lectus, dignissim sit amet gravida at, tincidunt eget velit. Vestibulum quis est justo. Praesent maximus, felis vel vulputate posuere, mi augue faucibus est, at maximus massa neque at felis. Nulla consectetur, dolor vel blandit hendrerit, erat augue tristique ex, in dignissim ex risus eget sapien. Suspendisse id tellus in lectus feugiat fermentum. Praesent nec turpis gravida, porta arcu ut, blandit erat. Vestibulum quis ultricies urna, mollis cursus urna. Sed eget neque a lacus pellentesque volutpat. Etiam at orci est. Duis lacinia pulvinar neque eget fermentum. Curabitur convallis lorem in lectus vulputate vestibulum. Nam aliquet orci vitae finibus efficitur.</p>
+				<div class="hablemos">
+					<h5>Hablemos de café</h5>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fringilla ullamcorper condimentum. Praesent arcu lectus, dignissim sit amet gravida at, tincidunt eget velit. Vestibulum quis est justo. Praesent maximus, felis vel vulputate posuere, mi augue faucibus est, at maximus massa neque at felis. Nulla consectetur, dolor vel blandit hendrerit, erat augue tristique ex, in dignissim ex risus eget sapien. Suspendisse id tellus in lectus feugiat fermentum. Praesent nec turpis gravida, porta arcu ut, blandit erat. Vestibulum quis ultricies urna, mollis cursus urna.</p><p class="none"> Sed eget neque a lacus pellentesque volutpat. Etiam at orci est. Duis lacinia pulvinar neque eget fermentum. Curabitur convallis lorem in lectus vulputate vestibulum. Nam aliquet orci vitae finibus efficitur.</p>
 			</article>
 		</article>
 	</section>
